--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ hyper = { version = "1.2", features = ["http1", "server"] }
 tokio = { version = "1.36", features = ["macros", "net", "rt"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1.3", features = ["server", "tokio"] }
+html_proc = { path = "./html_proc" }
